force-app/main/default/objects/Ticket_Route__c/Ticket_Route__c.object-meta.xml
<CustomObject>
    <description>For External Ticket &amp; Ticket Certificate</description>
    <label>Ticket Route</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>