force-app/main/default/objects/Ticket_Route__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <label>Arrival Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>