force-app/main/default/objects/Ticket_Route__c/fields/ArrivalID__c.field-meta.xml
<CustomField>
    <fullName>ArrivalID__c</fullName>
    <label>Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>