force-app/main/default/objects/Ticket_Route__c/fields/Depature__c.field-meta.xml
<CustomField>
    <fullName>Depature__c</fullName>
    <label>Depature Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>