force-app/main/default/objects/Ticket_Route__c/fields/DepatureID__c.field-meta.xml
<CustomField>
    <fullName>DepatureID__c</fullName>
    <label>Depature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>