force-app/main/default/objects/Ticket_Route__c/fields/External_Tickets__c.field-meta.xml
<CustomField>
    <fullName>External_Tickets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Tickets</label>
    <referenceTo>External_Tickets__c</referenceTo>
    <relationshipLabel>Ticket Routes</relationshipLabel>
    <relationshipName>Ticket_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>