force-app/main/default/objects/Ticket_Route__c/fields/Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Flight_No__c</fullName>
    <defaultValue>&quot;JX&quot;</defaultValue>
    <label>Flight No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>