force-app/main/default/objects/Ticket_Route__c/fields/Ticket_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Certificate</label>
    <referenceTo>Ticket_Certificate__c</referenceTo>
    <relationshipLabel>Ticket Routes</relationshipLabel>
    <relationshipName>Ticket_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>