force-app/main/default/objects/Ticket_Route__c/validationRules/Can_Not_Edit_Route.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Edit_Route</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(External_Tickets__r.Application_Type__c , &quot;Anonymous&quot;), 
NOT(CONTAINS($Profile.Name, &quot;System&quot;)),
NOT(CONTAINS($Profile.Name, &quot;API&quot;)),
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Can&apos;t edit route.</errorMessage>
</ValidationRule>