force-app/main/default/objects/Ticket_Route__c/validationRules/Only_Anonymous_Can_Create_Route.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Anonymous_Can_Create_Route</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(External_Tickets__r.Application_Type__c , &quot;Registered&quot;), 
NOT(CONTAINS($Profile.Name, &quot;System&quot;)),
NOT(CONTAINS($Profile.Name, &quot;API&quot;))
)</errorConditionFormula>
    <errorMessage>&quot;Application Type = Registered&quot; can&apos;t create route.</errorMessage>
</ValidationRule>